[package]
name = "conan"
version = "1.0.0"
edition = "2021"
license = "GPL-3.0"  # Change from current license
description = "OSINT tool"
repository = "https://github.com/tomhoma/conan.git"
authors = ["tomhoma"]

[dependencies]
# Async runtime
tokio = { version = "1.42", features = ["full"] }

# HTTP client with compression support
reqwest = { version = "0.12", features = ["gzip", "brotli", "deflate", "json", "stream"] }

# CLI parsing
clap = { version = "4.5", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Terminal coloring and tables
colored = "2.1"
comfy-table = "7.1"

# Error handling
anyhow = "1.0"

# Time handling
chrono = "0.4"

# Logging
env_logger = "0.11"

# Performance optimizations
once_cell = "1.20"  # For lazy static HTTP client
futures = "0.3"     # For FuturesUnordered

[profile.release]
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
opt-level = 3

[profile.release.package."*"]
opt-level = 3